--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
   
   <properties>
   	<java.target.version>1.8</java.target.version>
-  	<manami.version>2.8.2</manami.version>
+  	<manami.version>2.8.3</manami.version>
   </properties>
   
   <build>
@@ -115,6 +115,8 @@
             	<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
+                	<finalName>manami</finalName>
+  					<appendAssemblyId>false</appendAssemblyId>
                 	<descriptorRefs>
                     	<descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
@@ -137,4 +139,6 @@
     	</plugins>
     </pluginManagement>
   </build>
+  <url>https://github.com/manami-project/manami</url>
+  <name>Manami</name>
 </project>
