Fixed: travis ci config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
-language: java
+language: "java"
+jdk:
+  - oraclejdk8
 sudo: false
 cache:
-	directories:
-		- .autoconf
-		- $HOME/.m2
+  directories:
+    - .autoconf
+    - $HOME/.m2
 deploy:
   provider: releases
   api_key: "GITHUB OAUTH TOKEN"
-  file: "gui/target/manami.jar"
+  file: "/home/travis/build/manami-project/manami/gui/target/manami.jar"
   skip_cleanup: true
   on:
     tags: true
