--- a/core/pom.xml
+++ b/core/pom.xml
@@ -46,5 +46,9 @@
   		<groupId>org.controlsfx</groupId>
   		<artifactId>controlsfx</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient</artifactId>
+  	</dependency>
   </dependencies>
 </project>
