--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -15,5 +15,9 @@
   		<groupId>org.apache.commons</groupId>
   		<artifactId>commons-lang3</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>jcl-over-slf4j</artifactId>
+  	</dependency>
   </dependencies>
 </project>
