--- a/pom.xml
+++ b/pom.xml
@@ -21,47 +21,47 @@
 	  	<dependency>
 	  		<groupId>ch.qos.logback</groupId>
 	  		<artifactId>logback-core</artifactId>
-	  		<version>1.1.2</version>
+	  		<version>${logback.version}</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>ch.qos.logback</groupId>
 	  		<artifactId>logback-classic</artifactId>
-	  		<version>1.1.2</version>
+	  		<version>${logback.version}</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>net.sf.supercsv</groupId>
 	  		<artifactId>super-csv</artifactId>
-	  		<version>2.2.0</version>
+	  		<version>2.4.0</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>org.json</groupId>
 	  		<artifactId>json</artifactId>
-	  		<version>20140107</version>
+	  		<version>20150729</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>org.apache.commons</groupId>
 	  		<artifactId>commons-lang3</artifactId>
-	  		<version>3.3.2</version>
+	  		<version>3.4</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>net.sourceforge.htmlunit</groupId>
 	  		<artifactId>htmlunit</artifactId>
-	  		<version>2.18</version>
+	  		<version>2.19</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>org.springframework</groupId>
 	  		<artifactId>spring-context</artifactId>
-	  		<version>4.1.1.RELEASE</version>
+	  		<version>4.2.3.RELEASE</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>org.slf4j</groupId>
 	  		<artifactId>jcl-over-slf4j</artifactId>
-	  		<version>1.7.7</version>
+	  		<version>1.7.13</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>org.controlsfx</groupId>
 	  		<artifactId>controlsfx</artifactId>
-	  		<version>8.20.8</version>
+	  		<version>8.40.10</version>
 	  	</dependency>
 	  	<dependency>
 	  		<groupId>com.google.guava</groupId>
@@ -79,6 +79,7 @@
   <properties>
   	<java.target.version>1.8</java.target.version>
   	<manami.version>2.9.0</manami.version>
+  	<logback.version>1.1.3</logback.version>
   </properties>
   
   <build>
