--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,6 @@
 	  		<version>3.4</version>
 	  	</dependency>
 	  	<dependency>
-	  		<groupId>net.sourceforge.htmlunit</groupId>
-	  		<artifactId>htmlunit</artifactId>
-	  		<version>2.19</version>
-	  	</dependency>
-	  	<dependency>
 	  		<groupId>org.springframework</groupId>
 	  		<artifactId>spring-context</artifactId>
 	  		<version>4.2.3.RELEASE</version>
@@ -72,6 +67,11 @@
 	  		<groupId>org.apache.httpcomponents</groupId>
 	  		<artifactId>httpclient</artifactId>
 	  		<version>4.5.1</version>
+	  	</dependency>
+	  	<dependency>
+			<groupId>com.ui4j</groupId>
+			<artifactId>ui4j-all</artifactId>
+			<version>2.1.0</version>
 	  	</dependency>
 	  </dependencies>
   </dependencyManagement>
