--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -19,5 +19,9 @@
   		<groupId>org.slf4j</groupId>
   		<artifactId>jcl-over-slf4j</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.projectlombok</groupId>
+  		<artifactId>lombok</artifactId>
+  	</dependency>  	
   </dependencies>
 </project>
