--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>ui4j-all</artifactId>
 			<version>2.1.0</version>
 	  	</dependency>
+	  	<dependency>
+	  		<groupId>org.projectlombok</groupId>
+	  		<artifactId>lombok</artifactId>
+	  		<version>1.16.8</version>
+	  	</dependency>
 	  </dependencies>
   </dependencyManagement>
   
