--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,18 @@
 	  		<artifactId>lombok</artifactId>
 	  		<version>1.16.8</version>
 	  	</dependency>
+	  	<dependency>
+	  		<groupId>org.hamcrest</groupId>
+	  		<artifactId>hamcrest-all</artifactId>
+	  		<version>1.3</version>
+	  		<scope>test</scope>
+	  	</dependency>
+	  	<dependency>
+	  		<groupId>junit</groupId>
+	  		<artifactId>junit</artifactId>
+	  		<version>4.12</version>
+	  		<scope>test</scope>
+	  	</dependency>
 	  </dependencies>
   </dependencyManagement>
   
