--- a/pom.xml
+++ b/pom.xml
@@ -5,166 +5,189 @@
   <version>${manami.version}</version>
   <packaging>pom</packaging>
   <modules>
-  	<module>cache</module>
-  	<module>core</module>
-  	<module>gui</module>
-  	<module>persistence</module>
-  	<module>dto</module>
+    <module>cache</module>
+    <module>core</module>
+    <module>gui</module>
+    <module>persistence</module>
+    <module>dto</module>
   </modules>
   <dependencyManagement>
-	  <dependencies>
-	  	<dependency>
-	  		<groupId>javax.inject</groupId>
-	  		<artifactId>javax.inject</artifactId>
-	  		<version>1</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>ch.qos.logback</groupId>
-	  		<artifactId>logback-core</artifactId>
-	  		<version>${logback.version}</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>ch.qos.logback</groupId>
-	  		<artifactId>logback-classic</artifactId>
-	  		<version>${logback.version}</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>net.sf.supercsv</groupId>
-	  		<artifactId>super-csv</artifactId>
-	  		<version>2.4.0</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.json</groupId>
-	  		<artifactId>json</artifactId>
-	  		<version>20160212</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.apache.commons</groupId>
-	  		<artifactId>commons-lang3</artifactId>
-	  		<version>3.4</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.springframework</groupId>
-	  		<artifactId>spring-context</artifactId>
-	  		<version>4.2.5.RELEASE</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.slf4j</groupId>
-	  		<artifactId>jcl-over-slf4j</artifactId>
-	  		<version>1.7.19</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.controlsfx</groupId>
-	  		<artifactId>controlsfx</artifactId>
-	  		<version>8.40.10</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>com.google.guava</groupId>
-	  		<artifactId>guava</artifactId>
-	  		<version>19.0</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.apache.httpcomponents</groupId>
-	  		<artifactId>httpclient</artifactId>
-	  		<version>4.5.2</version>
-	  	</dependency>
-	  	<dependency>
-			<groupId>com.ui4j</groupId>
-			<artifactId>ui4j-all</artifactId>
-			<version>2.1.0</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.projectlombok</groupId>
-	  		<artifactId>lombok</artifactId>
-	  		<version>1.16.8</version>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.hamcrest</groupId>
-	  		<artifactId>hamcrest-all</artifactId>
-	  		<version>1.3</version>
-	  		<scope>test</scope>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>junit</groupId>
-	  		<artifactId>junit</artifactId>
-	  		<version>4.12</version>
-	  		<scope>test</scope>
-	  	</dependency>
-	  	<dependency>
-	  		<groupId>org.mockito</groupId>
-	  		<artifactId>mockito-all</artifactId>
-	  		<version>1.10.19</version>
-	  	</dependency>
-	  </dependencies>
+      <dependencies>
+        <dependency>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160212</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>8.40.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ui4j</groupId>
+            <artifactId>ui4j-all</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+      </dependencies>
   </dependencyManagement>
   
   <properties>
-  	<java.target.version>1.8</java.target.version>
-  	<manami.version>2.10.2</manami.version>
-  	<logback.version>1.1.6</logback.version>
+    <java.target.version>1.8</java.target.version>
+    <manami.version>2.10.2</manami.version>
+    <logback.version>1.1.6</logback.version>
   </properties>
   
   <build>
-  	<plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>2.5</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.4</version>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-			<source>${java.target.version}</source>
-		    <target>${java.target.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-eclipse-plugin</artifactId>
-        <version>2.9</version>
-        <configuration>
-			<classpathContainers>
-				<classpathContainer>org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER</classpathContainer>
-				<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
-			</classpathContainers>
-        </configuration>
-      </plugin>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.5</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.4</version>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <source>${java.target.version}</source>
+                <target>${java.target.version}</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-eclipse-plugin</artifactId>
+            <version>2.9</version>
+            <configuration>
+                <classpathContainers>
+                    <classpathContainer>org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER</classpathContainer>
+                    <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
+                </classpathContainers>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.7.6.201602180812</version>
+        </plugin>
     </plugins>
     <pluginManagement>
-    	<plugins>
-    		<plugin>
-            	<groupId>org.apache.maven.plugins</groupId>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                	<finalName>manami</finalName>
-  					<appendAssemblyId>false</appendAssemblyId>
-                	<descriptorRefs>
-                    	<descriptorRef>jar-with-dependencies</descriptorRef>
+                    <finalName>manami</finalName>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                     <archive>
-                    	<manifest>
-                        	<mainClass>io.github.manami.Main</mainClass>
+                        <manifest>
+                            <mainClass>io.github.manami.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
                 <executions>
-                	<execution>
-                    	<id>make-assembly</id>
+                    <execution>
+                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
-                        	<goal>single</goal>
+                            <goal>single</goal>
                         </goals>
-                	</execution>
+                    </execution>
                 </executions>
-    		</plugin>
-    	</plugins>
+            </plugin>
+            <plugin>
+              <groupId>org.jacoco</groupId>
+              <artifactId>jacoco-maven-plugin</artifactId>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>prepare-agent</goal>
+                  </goals>
+                </execution>
+                <execution>
+                  <id>report</id>
+                  <phase>test</phase>
+                  <goals>
+                    <goal>report</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+        </plugins>
     </pluginManagement>
   </build>
   <url>https://github.com/manami-project/manami</url>
