--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        	<groupId>commons-validator</groupId>
+        	<artifactId>commons-validator</artifactId>
+        	<version>1.5.1</version>
+        </dependency>
       </dependencies>
   </dependencyManagement>
   
