Changed: Testing framework from JUnit to TestNG

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-# Custom
+### Custom ###
+# Log files
 *.log
+
+# TestNG output
+**/test-output/**
+
+
+
 
 # Created by https://www.gitignore.io
 
