--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -43,10 +43,6 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
         </dependency>
@@ -56,8 +52,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
+        	<groupId>org.testng</groupId>
+        	<artifactId>testng</artifactId>
         </dependency>
     </dependencies>
 </project>
