--- a/pom.xml
+++ b/pom.xml
@@ -71,11 +71,6 @@
                 <version>4.5.2</version>
             </dependency>
             <dependency>
-                <groupId>com.ui4j</groupId>
-                <artifactId>ui4j-all</artifactId>
-                <version>2.1.0</version>
-            </dependency>
-            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.16.10</version>
@@ -97,13 +92,34 @@
                 <artifactId>commons-validator</artifactId>
                 <version>1.5.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.moodysalem</groupId>
+                <artifactId>phantomjs-wrapper</artifactId>
+                <version>${phantomjs.wrapper.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.moodysalem</groupId>
+                <artifactId>phantomjs-wrapper-windows-binary</artifactId>
+                <version>${phantomjs.wrapper.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.moodysalem</groupId>
+                <artifactId>phantomjs-wrapper-linux-binary</artifactId>
+                <version>${phantomjs.wrapper.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.moodysalem</groupId>
+                <artifactId>phantomjs-wrapper-macosx-binary</artifactId>
+                <version>${phantomjs.wrapper.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <properties>
         <java.target.version>1.8</java.target.version>
-        <manami.version>2.10.3</manami.version>
+        <manami.version>2.10.4</manami.version>
         <logback.version>1.1.7</logback.version>
+        <phantomjs.wrapper.version>3.0.0</phantomjs.wrapper.version>
     </properties>
 
     <build>
