Changed: Manifest entry for built-by

--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,9 @@
                             <manifest>
                                 <mainClass>io.github.manami.Main</mainClass>
                             </manifest>
+                            <manifestEntries>
+	                            <Built-By>love for anmime</Built-By>
+	                        </manifestEntries>
                         </archive>
                     </configuration>
                     <executions>
