Added: Auto installer
+ Checks if all files are in place and sets the path of for the stylesheet
file to the correct absolute path

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
                 <artifactId>phantomjs-wrapper-macosx-binary</artifactId>
                 <version>${phantomjs.wrapper.version}</version>
             </dependency>
+            <dependency>
+            	<groupId>commons-io</groupId>
+            	<artifactId>commons-io</artifactId>
+            	<version>2.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
