--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,5 +60,9 @@
         	<groupId>org.testng</groupId>
         	<artifactId>testng</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>commons-io</groupId>
+        	<artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 </project>
