--- a/dto/pom.xml
+++ b/dto/pom.xml
@@ -29,5 +29,9 @@
         	<groupId>org.testng</groupId>
         	<artifactId>testng</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+        </dependency>
     </dependencies>
 </project>
