--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,18 +6,19 @@
         <groupId>io.github.manami</groupId>
         <artifactId>parent</artifactId>
         <version>${manami.version}</version>
+        <relativePath>../</relativePath>
     </parent>
     <artifactId>core</artifactId>
     <dependencies>
         <dependency>
             <groupId>io.github.manami</groupId>
             <artifactId>dto</artifactId>
-            <version>${project.version}</version>
+            <version>${manami.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.manami</groupId>
             <artifactId>persistence</artifactId>
-            <version>${project.version}</version>
+            <version>${manami.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -38,7 +39,7 @@
         <dependency>
             <groupId>io.github.manami</groupId>
             <artifactId>cache</artifactId>
-            <version>${project.version}</version>
+            <version>${manami.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
