--- a/pom.xml
+++ b/pom.xml
@@ -223,4 +223,11 @@
   </build>
   <url>https://github.com/manami-project/manami</url>
   <name>Manami</name>
+  <licenses>
+    <license>
+      <name>GNU Affero General Public License, Version 3.0</name>
+      <url>http://www.gnu.org/licenses/agpl-3.0.de.html</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 </project>
