--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -34,5 +34,9 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+        </dependency>
     </dependencies>
 </project>
