--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,16 @@
         <artifactId>javafx-fxml</artifactId>
         <version>${javafx.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-fxml</artifactId>
+        <version>${javafx.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.5</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
