--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 11, 14 ]
+        java: [ 11, x ]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
