Added github-actions to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -72,4 +72,8 @@ updates:
       - modb-test
     schedule:
       interval: "daily"
-    open-pull-requests-limit: 12
+    open-pull-requests-limit: 20
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "daily"
