--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -31,6 +31,15 @@ jobs:
         env:
           GH_PACKAGES_READ_TOKEN: ${{ secrets.PACKAGES_READ_TOKEN }}
         run: ./gradlew test
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          check_name: Test results JDK ${{ matrix.java }}
+          comment_title: Test results JDK ${{ matrix.java }}
+          comment_mode: changes
+          files: |
+            /github/workspace/**/build/test-results/**/*.xml
       - name: Generate coverage
         if: ${{ matrix.java == 21 }}
         env:
