--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ logback-classic = "1.5.6"
 tornadofx = "1.7.20"
 tornadofx-controlsfx = "0.1.1"
 javafx = "23-ea+22"
+kover = "0.8.2"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -48,6 +49,7 @@ javafx-web = { module = "org.openjfx:javafx-web", version.ref = "javafx" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 javafxplugin = { id = "org.openjfx.javafxplugin", version = "0.1.0" }
 shadow = { id = "com.github.johnrengelman.shadow", version = "8.1.1" }
+kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 
 [bundles]
 kotlin = [
