Fixed error with javafx 24 ea

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,8 +17,8 @@ commons-lang3 = "3.17.0"
 logback-classic = "1.5.16"
 tornadofx = "1.7.20"
 tornadofx-controlsfx = "0.1.1"
-javafx = "24-ea+19"
 kover = "0.9.1"
+javafx = "23.0.1"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
