Deactivate latest jvm builds, because tooling (jdk provider, gradle,...) are always way too slow to adapt. Matrix build is retained to make offer the possibility to manually upgrade to the next JDK with builds in parallel

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 21, x ]
+        java: [ 21 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
