Set 'platformAutomerge' to false in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -19,7 +19,8 @@
         "minor",
         "patch"
       ],
-      "automerge": true
+      "automerge": true,
+      "platformAutomerge": false
     }
   ]
 }
